# lernatelier-checker

./: CHANGELOG.md  LICENSE  README.md  _entry.py  build_exe.py  cliff.toml  pyproject.toml  requirements-dev.txt
.github/workflows/: release.yml
lernatelier_checker/: __init__.py  __main__.py  formatter.py  models.py  parser.py
tests/: test_cli.py  test_formatter.py  test_models.py  test_parser.py
tests/fixtures/: Lernperiode-4-complete.md  Lernperiode-4-incomplete.md
