[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lernatelier-checker"
version = "0.1.0"
description = "Automated checks for formal aspects of Lernatelier documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lernatelier-checker = "lernatelier_checker.__main__:main"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
