[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lernatelier-checker"
version = "0.3.0"
description = "Automated checks for formal aspects of Lernatelier documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lernatelier-checker = "lernatelier_checker.__main__:main"

[dependency-groups]
dev = ["pytest>=8", "pyinstaller>=6", "ruff>=0.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
